Implement NotificationService